--- a/index.html
+++ b/index.html
@@ -440,8 +440,8 @@
 
     <script>
         // Configuration Supabase - REMPLACE PAR TES CLÉS
-        const SUPABASE_URL = 'TON_URL_SUPABASE';
-        const SUPABASE_KEY = 'TA_CLE_SUPABASE';
+        const SUPABASE_URL = 'https://gmwdrqeskqhvwhpueotp.supabase.co';
+        const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imdtd2RycWVza3FodndocHVlb3RwIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQ5NTE1MTEsImV4cCI6MjA4MDUyNzUxMX0.HkgmDYVzwGNqDbio9NBtGR5yqOXrxgw2dSJpEBtcnMw';
         const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
         let currentUser = null;
